--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,16 @@ h2 {
 	display: none;
 }
 
+h3.moto {
+	font-family: "Gill Sans";
+	font-weight: bold;
+	color: rgba(242,242,242,1);
+	float: right;
+	position: relative;
+	top: 80%;
+	display: none;
+}
+
 
 @media (max-width: 800px) {
 	.left-box {
